src/test/deca/syntax/valid/exemple_sans_objet.deca
// Description:
//    Programme pour l'affichage en flottant de la moitié du carré d'un entier
//
// Resultats:
//      0,5*x²
//
//
// Historique:
//    cree le 04/01/2023
{
    int x ;
    x=readInt() ;
    println(0.5*(x*x)) ;
}